end_to_end_demo/traefik_ingress_controller/traefik_dashboard_ingress_rules.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: traefik-dashboard.com
    http:
      paths:
      - backend:
          serviceName: traefik-web-ui
          servicePort: 80
